# Automated-Cybersecurity-Testing-Framework

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  requirements.txt  startup.sh
docs/: architecture.md  remediation.md  test_cases.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  theme.js
frontend/src/components/: ActivityLog.js  Dashboard.js  FindingsTable.js  History.js  ReportViewer.js  ResultsTable.js  ScanComponent.js  SectionCard.js  SettingsPanel.js  StatCard.js  StatusChip.js  VulnerabilityChart.js
frontend/src/utils/: export.js
src/emulator/: can_emulator.cpp  can_emulator.hpp
src/reporting/: logger.py  report_generator.py
src/scanner/: scanner.py
src/scanner/attacks/: inject.py  sniff.py
src/scanner/detection/: engine.py  rules.py
src/tests/: test_emulator.py  test_scanner.py
